--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express-jwt": "^6.1.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
